Add About Xtended Page in Device Info Section
Change-Id: I59c192225d558663a557c4a6b3db05eeb2fdb72b

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10080,4 +10080,7 @@
 
     <!-- Title for Connected device shortcut [CHAR LIMIT=30] -->
     <string name="devices_title">Devices</string>
+
+    <string name="xtended_about_info">About Xtended</string>
+
 </resources>
